--- a/frontend/crm/package.json
+++ b/frontend/crm/package.json
@@ -10,13 +10,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.13.0",
+    "@emotion/styled": "^11.13.0",
     "@fortawesome/fontawesome-free": "^6.6.0",
+    "@heroicons/react": "^2.1.5",
     "@material-tailwind/react": "^2.1.9",
+    "@mui/material": "^5.16.5",
     "prettier": "^3.3.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
-    "react-router-dom": "^6.25.1"
+    "react-router-dom": "^6.25.1",
+    "rippleui": "^1.12.1"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
