--- a/frontend/crm/package.json
+++ b/frontend/crm/package.json
@@ -20,7 +20,10 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
+    "react-paginate": "^8.2.0",
     "react-router-dom": "^6.25.1",
+    "react-select": "^5.8.0",
+    "react-table": "^7.8.0",
     "rippleui": "^1.12.1"
   },
   "devDependencies": {
