--- a/frontend/crm/package.json
+++ b/frontend/crm/package.json
@@ -17,9 +17,11 @@
     "@heroicons/react": "^2.1.5",
     "@material-tailwind/react": "^2.1.9",
     "@mui/material": "^5.16.5",
+    "chart.js": "^4.4.3",
     "prettier": "^3.3.3",
     "react": "^18.3.1",
     "react-beautiful-dnd": "^13.1.1",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
     "react-paginate": "^8.2.0",
