--- a/frontend/crm/package.json
+++ b/frontend/crm/package.json
@@ -19,6 +19,7 @@
     "@mui/material": "^5.16.5",
     "chart.js": "^4.4.3",
     "prettier": "^3.3.3",
+    "prettier-plugin-tailwindcss": "^0.6.5",
     "react": "^18.3.1",
     "react-beautiful-dnd": "^13.1.1",
     "react-chartjs-2": "^5.2.0",
