--- a/frontend/crm/package.json
+++ b/frontend/crm/package.json
@@ -18,6 +18,7 @@
     "@material-tailwind/react": "^2.1.9",
     "@mui/material": "^5.16.5",
     "chart.js": "^4.4.3",
+    "emailjs-com": "^3.2.0",
     "prettier": "^3.3.3",
     "prettier-plugin-tailwindcss": "^0.6.5",
     "react": "^18.3.1",
